# gbserver

./: .gitignore  .gitmodules  GB28181_TEST_REPORT.md  LICENSE  README.md  TEST_CATALOG_FIX.md  start_service.sh  test_capture_1.9_response.py  test_catalog.py  test_catalog_notify.py  test_keepalive.py  test_new_device_auth.py  test_register_correct_id.py  test_register_expires.py  test_register_with_auth_and_contact.py  test_register_with_contact.py  test_sip_ack.py  test_whitelist_blacklist.py  功能清单.md  国标服务器系统需求规格说明书.md  架构设计.md
.github/workflows/: ci.yml
backend/: CMakeLists.txt
backend/db/: README.md  migration_add_src_addr.sql  schema_with_core_data.sql
backend/db/migrations/: 001_media_preview_invite_timeout.sql
backend/sql/: alter_cameras.sql  alter_gb_local_config_catalog_on_register.sql  audit_cameras_pre_migration.sql  create_catalog_nodes.sql  migrate_add_business_group_id.sql  migrate_add_camera_fields.sql  migrate_add_catalog_group.sql  migrate_add_device_fields.sql  migrate_add_device_id.sql  migrate_add_stream_sessions.sql  migrate_cameras_bigint_pk.sql  migrate_catalog_group_node_type_215_216.sql  migrate_catalog_nodes.sql  migrate_device_platforms_signal.sql  migrate_media_rtp_transport.sql  migrate_upstream_catalog_camera_exclude.sql  migrate_upstream_catalog_scope.sql  migrate_upstream_platforms_gb_id_unique.sql  migrate_upstream_register_expires.sql  rollback_cameras_bigint_pk.README.md
backend/src/: main.cpp
backend/src/infra/: AuthHelper.cpp  AuthHelper.h  CatalogGroupEncoding.cpp  CatalogGroupEncoding.h  CatalogGroupService.cpp  CatalogGroupService.h  DbUtil.cpp  DbUtil.h  HttpSession.cpp  HttpSession.h  MediaService.cpp  MediaService.h  SipCatalog.cpp  SipCatalog.h  SipDeviceCache.h  SipDigest.cpp  SipDigest.h  SipHandler.cpp  SipHandler.h  SipServerPjsip.cpp  SipServerPjsip.h  UpstreamInviteBridge.cpp  UpstreamInviteBridge.h  UpstreamPlatformService.cpp  UpstreamPlatformService.h  UpstreamRegistrar.cpp  UpstreamRegistrar.h
backend/tests/: catalog_group_encoding_test.cpp
config/: gb_service.ini  gb_service.ini.example
config/zlm/: README.md  config.ini
deploy/: README.md  deploy-commands.sh  install.sh
deploy/config/: gb_service.conf  gb_service.service
deploy/frontend/: index.html
deploy/frontend/assets/: Alarms-738e782e.css  Alarms-c17ba87f.js  CameraReplay-117e1b42.js  Home-ce2c7fb2.js  (+28 more)
deploy/sql/: schema.sql
docs/: SIP功能测试-下级接入.md  catalog-appendix-o-j.md  catalog-group-encoding.md  data-model.md  下级接入设计方案核对.md  推进步骤-下级接入及后续.md  架构设计检核.md  编码阶段就绪检核.md  编译和部署.md  骨架测试说明.md
docs/api/: http-contracts.md
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: README.md  auth.spec.js
frontend/playwright-report/: index.html
frontend/src/: App.vue  main.js
nginx/: README.md  gb_service.conf
scripts/: auto_deploy.sh  build_and_test.sh  build_pjproject.sh  fix_and_build.sh  rebuild-and-run.sh  skeleton-test.sh  test-api.sh  test-sip-register.sh  test_camera_delete_api.sh  test_catalog_group.sh  test_platforms_upstream.sh  test_ptz_api.sh  verify_repo.sh
(+23 files in other folders)
